# rewasm

./: .gitignore  Cargo.toml  README.md  TODO.md
examples/: abnormal_exits.wat  block_ret.wat  br_table.wat  dead_code.wat  loop.wat  panic.wat  result.wat  sidefx.wat
src/: dominance.rs  fmt.rs  lib.rs  main.rs  wasm.rs
src/analysis/: dead_code_elimination.rs  expression_propagation.rs  mod.rs  used_vars.rs
src/cfg/: builder.rs  mod.rs
src/ssa/: cond.rs  construction.rs  deconstruction.rs  expr.rs  mod.rs  stmt.rs  structuring.rs  value_space.rs
src/structuring/: condition_refinement.rs  loop_refinement.rs  mod.rs  rename_vars.rs  sidefx_remover.rs
src/wasm/: mod.rs  nan_preserving_float.rs  value.rs
