[package]
name = "rewasm"
version = "0.1.0"
authors = ["Benedikt Werner <1benediktwerner@gmail.com>"]
edition = "2018"
default-run = "rewasm"

[dependencies]
parity-wasm = "0.41"
wasmi-validation = "0.3"
clap = "2.33.0"
failure = "0.1"
slab = "0.4"
color-backtrace = "0.3"
z3-sys = "0.5.0"
z3 = "0.4.0"
bwasm = { git = "https://github.com/benediktwerner/bwasm" }

[replace]
"z3-sys:0.5.0" = { git = "https://github.com/benediktwerner/z3.rs" }
"z3:0.4.0" = { git = "https://github.com/benediktwerner/z3.rs" }
