[package]
name = "rewasm"
version = "0.1.0"
authors = ["Benedikt Werner <1benediktwerner@gmail.com>"]
edition = "2018"

[dependencies]
bwasm = "0.1"
clap = "2.33.0"
slab = "0.4"
color-backtrace = "0.3"
z3-sys = "0.5.0"
z3 = "0.4.0"

[replace]
"z3-sys:0.5.0" = { git = "https://github.com/benediktwerner/z3.rs" }
"z3:0.4.0" = { git = "https://github.com/benediktwerner/z3.rs" }
